# ferrovault

./: .gitignore  ATTRIBUTION.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
docs/: code-walkthrough.md  threat-model.md
docs/superpowers/plans/: 2026-06-28-ferrovault.md
docs/superpowers/specs/: 2026-06-28-ferrovault-design.md
examples/: gui_png.rs  tui_demo.rs  tui_png.rs
site/: index.html
src/: cli.rs  clipboard.rs  commands.rs  config.rs  crypto.rs  format.rs  generator.rs  gui.rs  hibp.rs  lib.rs  main.rs  model.rs  scramble.rs  script_codec.rs  sync.rs  totp.rs  tui.rs  vault.rs
tests/: change_password.rs  cli.rs  crypto.rs  format.rs  generator.rs  hibp.rs  model.rs  scramble.rs  script_codec.rs  stats.rs  sync.rs  totp.rs  tui_snapshot.rs  vault.rs
