[package]
name = "ferrovault"
version = "0.1.0"
edition = "2021"
description = "Encrypted command-line password manager"
license = "MIT"

[lib]
name = "ferrovault"
path = "src/lib.rs"

[[bin]]
name = "ferrovault"
path = "src/main.rs"

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
rpassword = "7"
zeroize = "1"
fd-lock = "4"
arboard = "3"
attohttpc = { version = "0.28", default-features = false, features = ["tls-native"] }
hmac = "0.12"
sha1 = "0.10"
base32 = "0.5"
rand = "0.8"
thiserror = "1"
dirs = "5"
time = { version = "0.3", features = ["formatting", "std"] }
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# Used only by the `tui_png` example (renders the TUI to PNG for visual review).
image = { version = "0.25", default-features = false, features = ["png"] }
ab_glyph = "0.2"
